--- a/package.json
+++ b/package.json
@@ -6,17 +6,24 @@
     "dev": "next dev --webpack",
     "build": "next build --webpack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "seed": "node ./scripts/loadDb.js"
   },
   "dependencies": {
+    "@datastax/astra-db-ts": "^1.1.0",
+    "dotenv": "^16.4.5",
+    "langchain": "^0.1.36",
+    "next": "16.0.0",
+    "node": "^22.21.0",
+    "openai": "^4.41.0",
+    "puppeteer": "^19.11.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "next": "16.0.0"
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "16.0.0"
+    "eslint-config-next": "16.0.0",
+    "tailwindcss": "^4"
   }
 }
