--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build --webpack",
     "start": "next start",
     "lint": "eslint",
-    "seed": "node ./scripts/loadDb.js"
+    "seed": "node ./scripts/loadDb.js",
+    "seed-supabase": "node ./scripts/loadSupabase.js"
   },
   "dependencies": {
     "@datastax/astra-db-ts": "^1.1.0",
@@ -18,7 +19,8 @@
     "openai": "^4.41.0",
     "puppeteer": "^19.11.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "@supabase/supabase-js": "^2.49.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
